Correctly handle empty paragraphs in slideshow animation fdo#43684

Fix a problem with empty paragraphs, that previously did not get
proper end-of-para / end-of-line markup, thus the slideshow mis-
counting them when getting index-based animation targets.